--- a/public/stylesheets/other_profile.css
+++ b/public/stylesheets/other_profile.css
@@ -82,6 +82,18 @@ nav .right {
   display: none;
 }
 
+
+#search {
+  width: 40px;
+  height: 40px;
+  margin-right: 20px;
+  border-radius: 30px;
+  background-color: #a881bf;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #profile-icon {
   width: 50px;
   height: 50px;
@@ -412,6 +424,10 @@ nav .right {
     margin-right: 10px;
   }
 
+   #search{
+    margin-right: 10px;
+  }
+
 
 
   .actualmain {
@@ -575,4 +591,13 @@ nav .right {
   margin-right: 5px;
 }
  
+}
+
+
+.post-image img {
+  width: 100%;
+  max-height: 400px;
+  object-fit: contain;
+  margin: 10px 0;
+  border-radius: 10px;
 }
