--- a/public/stylesheets/password.css
+++ b/public/stylesheets/password.css
@@ -61,7 +61,7 @@ nav .right {
   height: auto;
   background-color: #d2ade7;
   border-radius: 40px;
-  overflow: hidden; 
+  overflow: hidden;
   background-image: url("/media/europa-bg.png");
   background-size: cover;
   background-position: center;
@@ -92,7 +92,7 @@ nav .right {
   margin-bottom: 30px;
 }
 
-.main form {
+.section {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -212,6 +212,30 @@ nav .right {
   color: #42242a;
 }
 
+
+#form-fields {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+#submit-btn{
+  width: 40%;
+  height: 40px;
+  padding: 8px 0;
+  border: none;
+  background-color: #d1c2bc;
+  border-radius: 100px;
+  color: #4f2b32;
+  font-family: "Space Mono", monospace;
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: background 0.2s;
+  margin-top: 10px;
+}
+
 @media (max-width: 700px) {
   .main {
     flex-direction: column;
@@ -263,3 +287,6 @@ nav .right {
     margin-bottom: 30px;
   }
 }
+
+
+
