--- a/public/stylesheets/edit_profile.css
+++ b/public/stylesheets/edit_profile.css
@@ -82,6 +82,18 @@ nav .right {
   display: none;
 }
 
+
+#search {
+  width: 40px;
+  height: 40px;
+  margin-right: 20px;
+  border-radius: 30px;
+  background-color: #a881bf;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #profile-icon {
   width: 50px;
   height: 50px;
@@ -246,6 +258,10 @@ nav .right {
   }
   #create-post-icon {
     display: flex;
+    margin-right: 10px;
+  }
+
+   #search{
     margin-right: 10px;
   }
 
