--- a/public/stylesheets/post_page.css
+++ b/public/stylesheets/post_page.css
@@ -86,6 +86,18 @@ nav .right {
 }
 
 
+#search {
+  width: 40px;
+  height: 40px;
+  margin-right: 20px;
+  border-radius: 30px;
+  background-color: #a881bf;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
 #profile-icon {
   width: 50px;
   height: 50px;
@@ -118,7 +130,7 @@ nav .right {
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: top;
   margin-top: 20px;
   gap: 30px;
 }
@@ -224,6 +236,25 @@ nav .right {
   font-weight: bold;
 }
 
+.comment-button {
+  border: none;
+  background: transparent;
+  font-size: 20px;
+  cursor: pointer;
+  transition: transform 0.2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.comment-count{
+   color: #42242a;
+  font-family: "Figtree", monospace;
+  font-size: 22px;
+  font-weight: bold;
+  margin-right: 5px;
+}
+
 .addcomment {
   padding: 20px;
   border-radius: 30px;
@@ -314,7 +345,6 @@ nav .right {
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  /* Ensures scroll only for the list */
 }
 
 .commentcard {
@@ -336,7 +366,7 @@ nav .right {
   align-items: center;
   gap: 10px;
   flex: 1;
-  min-width: 0; /* Fixes overflow issues in flex */
+  min-width: 0;
 }
 
 .commentcard a {
@@ -391,6 +421,10 @@ nav .right {
     margin-right: 10px;
   }
 
+   #search{
+    margin-right: 10px;
+  }
+
   #profile-icon {
     width: 40px;
     height: 40px;
@@ -423,3 +457,13 @@ nav .right {
     max-height: 400px;
   }
 }
+
+
+.post-image img {
+  width: 100%;
+  max-height: 400px;
+  object-fit: contain;
+  margin: 10px 0;
+  border-radius: 10px;
+}
+
