--- a/views/edit_profile.ejs
+++ b/views/edit_profile.ejs
@@ -22,6 +22,11 @@
             <a href="/"><h1>EUROPA</h1></a>
         </div>
         <div class="right">
+             <a href="/search" id="search"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
+                    width="24px" fill="#42242a">
+                    <path
+                        d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z" />
+                </svg></a>
             <a href="/newpost" id="create-post">NEW POST</a>
             <a href="/newpost" id="create-post-icon"><svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#42242a"><path d="M440-280h80v-160h160v-80H520v-160h-80v160H280v80h160v160Zm40 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg></a>
    
@@ -34,7 +39,7 @@
 
     <div class="main">
 
-        <form action="/update-profile" method="post">
+        <form action="/update-profile" method="post" enctype="multipart/form-data">
         <div class="sidebar">
             <h2>
                 Update your Profile :
@@ -44,8 +49,8 @@
                 <img src="<%= user.icon %>"
                 alt="">
                 <div class="icon-input">
-                    <label for="icon-url" >Profile Icon URL : </label>
-                    <input type="text" name="icon" id="icon" value="<%= user.icon %>">
+                    <label for="icon">Upload Profile Icon (JPG/PNG): </label>
+                    <input type="file" name="icon" accept="image/*" style="display: flex; align-items: center; justify-content: center;">
                 </div>
             </div>
             <label for="fullname">Full name : </label>
