--- a/views/followers_page.ejs
+++ b/views/followers_page.ejs
@@ -26,6 +26,11 @@
             </a>
         </div>
         <div class="right">
+             <a href="/search" id="search"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
+                    width="24px" fill="#42242a">
+                    <path
+                        d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z" />
+                </svg></a>
             <a href="/newpost" id="create-post">NEW POST</a>
              <a href="/newpost" id="create-post-icon"><svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#42242a"><path d="M440-280h80v-160h160v-80H520v-160h-80v160H280v80h160v160Zm40 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg></a>
    
@@ -73,7 +78,6 @@
             <div class="followersbox">
                 <h1>Followers</h1>
                 <div class="followers-list">
-                    <!-- Begin followers loop here -->
 
                     <%followers.forEach(function(follower) { %>
 
@@ -89,7 +93,6 @@
                         </div>
 
                         <%})%>
-                            <!-- End followers loop here -->
                 </div>
             </div>
 
@@ -108,11 +111,9 @@
 
                 if (!res.ok) throw new Error('Failed to remove follower');
 
-                // Remove follower card from DOM
                 const card = button.closest('.followcard');
                 card.remove();
 
-                // Update followers count
                 const countSpan = document.getElementById("followersCount");
                 let count = parseInt(countSpan.textContent);
                 countSpan.textContent = count - 1;
