--- a/views/following_page.ejs
+++ b/views/following_page.ejs
@@ -24,6 +24,11 @@
             </a>
         </div>
         <div class="right">
+            <a href="/search" id="search"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
+                    width="24px" fill="#42242a">
+                    <path
+                        d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z" />
+                </svg></a>
             <a href="/newpost" id="create-post">NEW POST</a>
             <a id="profile-icon" href="/myprofile">
                 <img src="<%= user.icon %>" alt="">
@@ -67,7 +72,7 @@
             <div class="followersbox">
                 <h1>Following</h1>
                 <div class="followers-list">
-                    <!-- Begin followers loop here -->
+                  
                     <% following.forEach(function(followed) { %>
                         <div class="followcard">
                             <a href="/profile/<%=followed.username%>" class="accountinfo">
@@ -86,7 +91,6 @@
                         </div>
                         <% }); %>
 
-                            <!-- End followers loop here -->
                 </div>
             </div>
 
