--- a/views/partials/post.ejs
+++ b/views/partials/post.ejs
@@ -1,48 +1,54 @@
- <% function timeAgo(date) {
-    const seconds = Math.floor((Date.now() - new Date(date)) / 1000);
-
-    const units = [
-        { label: 'year',   seconds: 365 * 24 * 60 * 60 },
-        { label: 'month',  seconds: 30 * 24 * 60 * 60 },
-        { label: 'day',    seconds: 24 * 60 * 60 },
-        { label: 'hour',   seconds: 60 * 60 },
-        { label: 'minute', seconds: 60 },
-        { label: 'second', seconds: 1 }
-    ];
-
-    for (const unit of units) {
-        const value = Math.floor(seconds / unit.seconds);
-        if (value > 0) {
-            return `${value} ${unit.label}${value !== 1 ? 's' : ''} ago`;
-        }
+<% function timeAgo(date) { const seconds=Math.floor((Date.now() - new Date(date)) / 1000); const units=[ {
+    label: 'year' , seconds: 365 * 24 * 60 * 60 }, { label: 'month' , seconds: 30 * 24 * 60 * 60 }, { label: 'day' ,
+    seconds: 24 * 60 * 60 }, { label: 'hour' , seconds: 60 * 60 }, { label: 'minute' , seconds: 60 }, { label: 'second'
+    , seconds: 1 } ]; for (const unit of units) { const value=Math.floor(seconds / unit.seconds); if (value> 0) {
+    return `${value} ${unit.label}${value !== 1 ? 's' : ''} ago`;
+    }
     }
 
     return 'just now';
-} %>
+    } %>
 
-<div style="background-color: <%= post.cardColor %>;" class="card" onclick="handleCardClick(event, '<%= post._id %>')">
-    <a href="/profile/<%=postuser.username%>" class="person-details">
-        <div class="person-icon">
-            <img src="<%=postuser.icon%>" alt="person" />
-        </div>
-        <div class="person-name">@<%=postuser.username%></div>
-    </a>
-    <p><%- post.content.replace(/\n/g, '<br>') %></p>
-    <div class="card-footer">
-        <div class="datecontainer"><%= timeAgo(post.date) %></div>
-        <div class="like-container">
-            <button class="like-button <%= post.likes.includes(user._id) ? 'liked' : '' %>"
-                    onclick="toggleLike(this, '<%= post._id %>')">
-                <!-- Unliked -->
-                <svg class="heart-outline" xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#42242a">
-                    <path d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z"></path>
-                </svg>
-                <!-- Liked -->
-                <svg class="heart-filled" xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#42242a">
-                    <path d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Z"></path>
-                </svg>
-            </button>
-            <span class="like-count"><%= post.likesCount %></span>
-        </div>
+    <div style="background-color: <%= post.cardColor %>;" class="card"
+        onclick="handleCardClick(event, '<%= post._id %>')">
+        <a href="/profile/<%=postuser.username%>" class="person-details">
+            <div class="person-icon">
+                <img src="<%=postuser.icon%>" alt="person" />
+            </div>
+            <div class="person-name">@<%=postuser.username%>
+            </div>
+        </a>
+        <p><%- post.content.replace(/\n/g, '<br>' ) %></p>
+        <% if (post.image) { %>
+            <div class="post-image">
+                <img src="<%= post.image %>" alt="Post image">
+            </div>
+            <% } %>
+                <div class="card-footer">
+                    <div class="datecontainer">
+                        <%= timeAgo(post.date) %>
+                    </div>
+                    <div class="like-container">
+                        <button class="like-button <%= post.likes.includes(user._id) ? 'liked' : '' %>"
+                            onclick="toggleLike(this, '<%= post._id %>')">
+                          
+                            <svg class="heart-outline" xmlns="http://www.w3.org/2000/svg" height="30px"
+                                viewBox="0 -960 960 960" width="30px" fill="#42242a">
+                                <path
+                                    d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z">
+                                </path>
+                            </svg>
+                            
+                            <svg class="heart-filled" xmlns="http://www.w3.org/2000/svg" height="30px"
+                                viewBox="0 -960 960 960" width="30px" fill="#42242a">
+                                <path
+                                    d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Z">
+                                </path>
+                            </svg>
+                        </button>
+                        <span class="like-count">
+                            <%= post.likesCount %>
+                        </span>
+                    </div>
+                </div>
     </div>
-</div>
