--- a/views/post_page.ejs
+++ b/views/post_page.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Post</title>
+    <title>Post</title>
     <link rel="icon" type="image/x-icon" href="/media/europa-icon.png">
     <link rel="stylesheet" href="/stylesheets/post_page.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
