--- a/public/stylesheets/other_followers.css
+++ b/public/stylesheets/other_followers.css
@@ -352,6 +352,10 @@ nav .right {
 
 @media (max-width: 768px) {
 
+  nav .left h1 {
+    font-size: 20px;
+  }
+
    #username {
     display: none;
   }
