--- a/public/stylesheets/password.css
+++ b/public/stylesheets/password.css
@@ -244,25 +244,31 @@ nav .right {
 
   .info {
     width: 100%;
-    min-height: 300px;
+    min-height: 200px;
     height: auto;
     margin-bottom: 20px;
   }
 
-  .main form {
-    width: 100%;
-    padding: 0px;
-  }
+  
 
   .section {
     width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
+     min-height: 500px;
+    padding: 0px;
   }
 
   .signup {
     width: 100%;
   }
+
+  
+.signup label {
+  font-size: 14px;
+}
+
+.signup input {
+  height: 40px;
+}
 
   .buttons #login-button {
     font-size: 12px;
@@ -274,10 +280,18 @@ nav .right {
 
   nav .left h1 {
     font-family: "Climate Crisis", sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     color: #42242a;
     letter-spacing: 2px;
     margin-left: 30px;
+  }
+
+  
+  .right h2 {
+    font-family: "Space Mono", monospace;
+    font-size: 16px;
+    color: #42242a;
+    margin-right: 20px;
   }
 
   .info h1 {
@@ -294,7 +308,12 @@ nav .right {
     color: #42242a;
     padding-left: 4px;
     translate: 0 -10px;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
+  }
+
+  .signup h2 {
+    font-size: 32px;
+    margin-bottom: 10px;
   }
 }
 
