--- a/public/stylesheets/create_post.css
+++ b/public/stylesheets/create_post.css
@@ -206,6 +206,10 @@ nav .right {
 
 @media (max-width: 720px) {
 
+  nav .left h1 {
+    font-size: 20px;
+  }
+
   #username {
    display: none;
   }
