--- a/public/stylesheets/followers_page.css
+++ b/public/stylesheets/followers_page.css
@@ -386,6 +386,10 @@ nav .right {
 
 @media (max-width: 768px) {
 
+  nav .left h1 {
+    font-size: 20px;
+  }
+
    #username {
     display: none;
   }
