--- a/public/stylesheets/post_page.css
+++ b/public/stylesheets/post_page.css
@@ -409,6 +409,10 @@ nav .right {
 }
 
 @media (max-width: 1080px) {
+  nav .left h1 {
+    font-size: 20px;
+  }
+  
   #username {
     display: none;
   }
