--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -214,49 +214,67 @@ nav .right {
 
   .info {
     width: 100%;
-    min-height: 300px;
+    min-height: 200px;
     height: auto;
     margin-bottom: 20px;
   }
 
-  .main form{
+  .main form {
     width: 100%;
+    min-height: 500px;
     padding: 0px;
   }
 
-    .signup {
-        width: 100%;
-        
-    }
+  .signup {
+    width: 100%;
+  }
 
-    .buttons #login-button {
-       font-size: 16px;
+.signup label {
+  font-size: 14px;
+}
 
-    }
+.signup input {
+  height: 40px;
+}
 
-    nav .left h1{
+  .buttons #login-button {
+    font-size: 16px;
+  }
+
+  nav .left h1 {
     font-family: "Climate Crisis", sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     color: #42242a;
     letter-spacing: 2px;
     margin-left: 30px;
-}
+  }
 
+  .right h2 {
+    font-family: "Space Mono", monospace;
+    font-size: 16px;
+    color: #42242a;
+    margin-right: 20px;
+  }
 
-.info h1{
+  .info h1 {
     font-family: "Figtree", sans-serif;
     font-size: 18vw;
     font-weight: 900;
     color: #42242a;
-}
+  }
 
-.info h2{
+  .info h2 {
     font-family: "Figtree", sans-serif;
     font-size: 3vw;
     font-weight: 700;
     color: #42242a;
     padding-left: 4px;
     translate: 0 -10px;
-    margin-bottom: 30px;
-}
+    margin-bottom: 0px;
+  }
+
+  .signup h2 {
+    font-size: 32px;
+    margin-bottom: 10px;
+  }
 }
